# task_flow

./: .gitignore  CLAUDE.md  LICENSE  README.md  extra_info.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: deploy_landing.yml  deploy_server.yml  publish_mcp.yml
designs/design-docs/: DESIGN.md  PRD.md
designs/pages/: analytics.html  configurations.html  create_project.html  create_task.html  dependency_graph.html  execution_timeline.html  main_dashboard.html  preffered_dependency_graph.html  task_details.html
docs/: agent-inbox-terminal-injection.md  features_to_add.md  landing-page-prd.md  twitter-thread.md
documentation/: package.json  pnpm-lock.yaml  specra.config.json
documentation/src/: app.css  app.html  hooks.server.ts
landing-page/: index.html
mcp-server/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
mcp-server/src/: agent-registry.ts  config.ts  db.ts  helpers.ts  index.ts  pending-questions.ts  resources.ts  retry.ts  sse.ts  tmux-bridge.ts  types.ts
mcp-server/tests/: activity.test.ts  analytics.test.ts  db.test.ts  integration.test.ts  notifications.test.ts  projects.test.ts  settings.test.ts  tasks.test.ts  timer.test.ts
relay-server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  secret.env
scripts/: encrypt_envs.sh  rebuild-sqlite.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+122 files in other folders)
