[package]
name = "task-flow"
version = "1.0.0"
description = "Local-first task execution system"
authors = ["dalmasonto"]
edition = "2021"

[lib]
name = "task_flow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
